Fixed tooltip hover alignment; hid the edit button.

--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -991,7 +991,7 @@ select
       width: max-content
       padding: 2px 6px
       white-space: nowrap
-      transform: translateY(147%)
+      transform: translateY(130%)
     .start-finish-toggle-container:hover::before,
     .start-finish-toggle-container:hover::after
       display: inline-block
